@@ -382,17 +382,5 @@ CYG_MACRO_END
 // This feature is not available on the SA11X0.
 
 //-----------------------------------------------------------------------------
-// Now include the details of the platform's Memory Map setup:
-
-#include <cyg/hal/plf_mmap.h>
-
-// and define the (considerably less efficient) routines that are available
-// for testing the actual memory map in force.
-
-externC cyg_uint32 hal_virt_to_phys_address( cyg_uint32 vaddr );
-externC cyg_uint32 hal_phys_to_virt_address( cyg_uint32 paddr );
-externC cyg_uint32 hal_virt_to_uncached_address( cyg_uint32 vaddr );
-
-//-----------------------------------------------------------------------------
 #endif // ifndef CYGONCE_HAL_CACHE_H
 // End of hal_cache.h
